--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "expo": "^51.0.24",
     "expo-status-bar": "~1.12.1",
+    "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
