--- a/package.json
+++ b/package.json
@@ -10,28 +10,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
-    "expo": "^51.0.24",
+    "expo": "^51.0.35",
     "expo-status-bar": "~1.12.1",
     "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "^0.74.5",
     "react-native-config": "^1.5.3",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.19.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-heroicons": "^4.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "^3.10.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
-    "react-native-svg": "^15.4.0",
+    "react-native-svg": "^15.2.0",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.2",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0"
   },
