--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -21,6 +22,7 @@
     "expo": "^51.0.39",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^12.0.10",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "lodash": "^4.17.21",
     "merge": "^2.1.1",
