--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@supabase/supabase-js": "^2.47.10",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "expo": "^51.0.39",
@@ -31,6 +32,7 @@
     "react-native": "0.74.5",
     "react-native-config": "^1.5.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-heroicons": "^4.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -38,13 +40,15 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-navigation": "^5.0.0",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^9.1.2",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "expo-secure-store": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
