--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.4",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -24,6 +24,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-font": "^12.0.10",
     "expo-image-picker": "~15.0.7",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "lodash": "^4.17.21",
     "merge": "^2.1.1",
@@ -47,8 +48,7 @@
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
-    "tailwind-merge": "^2.5.5",
-    "expo-secure-store": "~13.0.2"
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
