--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@supabase/supabase-js": "^2.47.10",
     "axios": "^1.7.7",
+    "base64-arraybuffer": "^1.0.2",
     "clsx": "^2.1.1",
     "expo": "^51.0.39",
     "expo-app-loading": "^2.1.1",
+    "expo-crypto": "^14.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "^12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-secure-store": "~13.0.2",
