--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@google/generative-ai": "^0.21.0",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -23,10 +24,11 @@
     "clsx": "^2.1.1",
     "expo": "^51.0.39",
     "expo-app-loading": "^2.1.1",
-    "expo-crypto": "^14.0.2",
+    "expo-crypto": "^13.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "^12.0.10",
     "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "~13.0.2",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "lodash": "^4.17.21",
@@ -36,15 +38,18 @@
     "react-native": "0.74.5",
     "react-native-config": "^1.5.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-heroicons": "^4.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-webview": "13.8.6",
     "react-navigation": "^5.0.0",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^9.1.2",
