--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "tastebuds",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "doctor": "npx expo install --fix"
   },
   "dependencies": {
+    "@expo/config-plugins": "~8.0.0",
+    "@expo/prebuild-config": "~7.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@google/generative-ai": "^0.21.0",
     "@gorhom/bottom-sheet": "^4.6.4",
@@ -22,14 +23,15 @@
     "axios": "^1.7.7",
     "base64-arraybuffer": "^1.0.2",
     "clsx": "^2.1.1",
-    "expo": "^51.0.39",
-    "expo-app-loading": "^2.1.1",
+    "expo": "~51.0.39",
     "expo-crypto": "^13.0.2",
+    "expo-dev-client": "~4.0.29",
     "expo-file-system": "~17.0.1",
     "expo-font": "^12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "lodash": "^4.17.21",
     "merge": "^2.1.1",
